--- a/Views/StudentsFilter/Index.cshtml
+++ b/Views/StudentsFilter/Index.cshtml
@@ -8,25 +8,23 @@
 
 <h1>Students</h1>
 
-<p>
-    <a asp-action="Create">Create New</a>
-</p>
-
+ 
 <form asp-controller="StudentsFilter" asp-action="Index" method="get">
     <div class="form-group">
         <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-lg-4">
+            <!-- Filter Fields -->
             <div class="col">
                 <label for="filterFN">First Name:</label>
-                <input type="text" id="filterFN" name="filterFN" value="@Model.FilterFN" class="form-control " placeholder="First name" />
+                <input type="text" id="filterFN" name="filterFN" value="@Model.FilterFN" class="form-control" placeholder="First name" />
             </div>
             <div class="col">
                 <label for="filterLN">Last Name:</label>
-                <input type="text" id="filterLN" name="filterLN" value="@Model.FilterLN" class="form-control" placeholder="First name" />
+                <input type="text" id="filterLN" name="filterLN" value="@Model.FilterLN" class="form-control" placeholder="Last name" />
             </div>
             <div class="col">
                 <label for="filterPlace">Place:</label>
                 <select id="filterPlace" name="filterPlace" class="form-control">
-                    <option value="">Choose</option>
+                    <option value="">Choose...</option>
                     @if (Model.Places != null)
                     {
                         foreach (var place in Model.Places)
@@ -34,15 +32,16 @@
                             var isSelected = Model.FilterPlace == place ? "selected" : "";
                             <option value="@place" isSelected>@place</option>
                         }
+
                     }
                 </select>
             </div>
             <div class="col">
                 <label for="filterE">Ethnicity:</label>
                 <select id="filterE" name="filterE" class="form-control">
-                    <option value="">Choose</option>
+                    <option value="">Choose...</option>
                     @if (Model.Ethnicities != null)
-                    {
+                    {  
                         foreach (var e in Model.Ethnicities)
                         {
                             var isSelected = Model.FilterE == e ? "selected" : "";
@@ -52,16 +51,21 @@
                 </select>
             </div>            
         </div>
-        <div class="row p-2 d-flex  float-  float-md-end">
-            <div class="col"> <button type="submit" class="btn btn-primary">Filter</button></div>
+        <div class="row p-2 d-flex float-md-end">
+            <div class="col">
+                <button type="submit" class="btn btn-primary" >Filter</button>
+            </div>
+            <div class="col">
+
+                <a class="nav-link text-dark" asp-area="" asp-controller="StudentsFilter" asp-action="Index">Reset</a>
+                
+                 </div>
         </div>
     </div>
-
-
-   
 </form>
 
-<table class="table">
+
+<table class="table" data-filter-control="true" filterControlVisible="true">
     <thead>
         <tr>
             <th>@Html.DisplayNameFor(model => model.Students.FirstOrDefault().FirstName)</th>
@@ -84,7 +88,7 @@
                 <td>@Html.DisplayFor(modelItem => item.Place)</td>
                 <td>@Html.DisplayFor(modelItem => item.Ethnicity)</td>
                 <td>@Html.DisplayFor(modelItem => item.IsDomestic)</td>
-                <td>@Html.DisplayFor(modelItem => item.Course.Id)</td>
+                <td>@Html.DisplayFor(modelItem => item.CourseId)</td>
                 <td>
                     <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
                     <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
@@ -94,3 +98,6 @@
         }
     </tbody>
 </table>
+<p>
+    <a asp-action="Create">Create New</a>
+</p>
