--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -3,6 +3,7 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <h1 class="display-4">Welcome to Student report generator</h1>
+    <p>In this project you can see list of courses available and list of students with their details. We can filter the students based on their first name, last name, place and ethnicity.</p>
+    <p>filtering feature based on the students age and course is work in progress.</p>
 </div>
