--- a/Views/StudentsFilter/Index.cshtml
+++ b/Views/StudentsFilter/Index.cshtml
@@ -69,14 +69,15 @@
 
 <table class="table" data-filter-control="true" filterControlVisible="true">
     <thead>
+
         <tr>
-            <th>@Html.DisplayNameFor(model => model.Students.FirstOrDefault().FirstName)</th>
-            <th>@Html.DisplayNameFor(model => model.Students.FirstOrDefault().LastName)</th>
-            <th>@Html.DisplayNameFor(model => model.Students.FirstOrDefault().DateOfBirth)</th>
-            <th>@Html.DisplayNameFor(model => model.Students.FirstOrDefault().Place)</th>
-            <th>@Html.DisplayNameFor(model => model.Students.FirstOrDefault().Ethnicity)</th>
-            <th>@Html.DisplayNameFor(model => model.Students.FirstOrDefault().IsDomestic)</th>
-            <th>@Html.DisplayNameFor(model => model.Students.FirstOrDefault().Course)</th>
+            <th>@Html.DisplayNameFor(model => model.Students[0].FirstName)</th>
+            <th>@Html.DisplayNameFor(model => model.Students[0].LastName)</th>
+            <th>@Html.DisplayNameFor(model => model.Students[0].DateOfBirth)</th>
+            <th>@Html.DisplayNameFor(model => model.Students[0].Place)</th>
+            <th>@Html.DisplayNameFor(model => model.Students[0].Ethnicity)</th>
+            <th>@Html.DisplayNameFor(model => model.Students[0].IsDomestic)</th>
+            <th>@Html.DisplayNameFor(model => model.Students[0].Course)</th>
             <th></th>
         </tr>
     </thead>
@@ -91,7 +92,7 @@
                 <td>@Html.DisplayFor(modelItem => item.Ethnicity)</td>
                 <td>@Html.DisplayFor(modelItem => item.IsDomestic)</td>
             @*     <td>@Html.DisplayFor(modelItem => item.CourseName)</td> *@
-                <td>@item.Course.Name</td>
+                <td>@item.Course?.Name</td>
                 <td>
                     <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
                     <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
