--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -3,7 +3,18 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome to Student report generator</h1>
-    <p>In this project you can see list of courses available and list of students with their details. We can filter the students based on their first name, last name, place and ethnicity.</p>
-    <p>filtering feature based on the students age and course is work in progress.</p>
+    <h1 class="display-4">Report generator</h1>
+    <p>
+        Welcome to the Report Generator! This app offers you to view and manage list of Courses and Students. Please follow the navigation bar above to go to course and students pages. In Course page you can view all available courses and you can Add Edit Delete. In students page you can view list of students and you can filter the tsudents by their First Name, Age, Place, Ethnicity. Fill the filters and click Filter button to see the result and click rest button to reset the filters.</p>
+<div class="row "   ></div>  
+ <div class="col-4"></div>
+    <div class="col-4 w-100">
+       <h3>Search Filters:</h3>
+        <h6> Filter students by First Name</h6>
+        <h6> Filter by Age (students older than the specified age)</h6>
+        <h6>Filter by Place</h6>
+        <h6>  Filter by Ethnicity</h6>
+        </div>
+    <div class="col-4"></div>
+    
 </div>
