--- a/Views/StudentsFilter/Index.cshtml
+++ b/Views/StudentsFilter/Index.cshtml
@@ -7,11 +7,14 @@
 
 
 <h1>Students</h1>
-<p>
+<ul>
+    <li>Enter your search criteria and click the "Filter" button to view the results.</li>
+    <li>Use the "Reset" button to clear the search criteria and return to the default view.</li>
+</ul>
 
-    Interactive Filtering: Enter your search criteria and click the "Filter" button to view the results.
-    Form Reset: Use the "Reset" button to clear the search criteria and return to the default view.
-    Explore these features to gain valuable insights into student and course data!
+    
+    
+    
 </p>
  
 <form asp-controller="StudentsFilter" asp-action="Index" method="get">
